# datatrans

./: Cargo.toml  typos.toml
src/common/: Cargo.toml
src/common/src/: error.rs  lib.rs  pipe.rs
src/common/src/config/: global.rs
src/common/src/element/: value.rs
src/core/: Cargo.toml
src/datatype/: Cargo.toml
