[workspace]
members = ["src/common", "src/core", "src/datatype"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.35.0", features = ["all"] }
async-trait = { version = "0.1.74" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
thiserror = { version = "1.0" }
anyhow = { version = "1.0", features = ["backtrace"] }

[profile.release]
debug = true
